Added help file.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <form name="input"><textarea id="textbox" class="inboxSection" name="textbox" cols="40" spellcheck="false" accesskey='i' onkeyup="keyInput()"></textarea></form>
       </div>
       <div class="buttonsSection">
-        <input type="button" id="inCopy" class="btn" data-clipboard-target="#contentsArea" value="複写領域𛂹"><br/>
+        <input type="button" id="inCopy" class="btn" data-clipboard-target="#contentsArea" value="複写領域へ"><br/>
         <input type="button" onClick="inboxClear();" value="消去"><br/>
         <a href="./help.html" target="_blank">使用方法</a>
       </div>
