Added license informations.

--- a/help.html
+++ b/help.html
@@ -60,7 +60,7 @@
 
 <ul>
 <li>
-変体仮名フォントは以下のURLからインストールできます（作成して下さったwakufactoryの方、IPAmj明朝フォントの関係者の方々に感謝します）。<br/>
+変体仮名フォントは以下のURLからインストールできます（作成して下さったwakufactoryの方、IPAmj明朝フォントの関係者の方々、独立行政法人情報処理推進機構（IPA）と 大学共同利用機関法人人間文化研究機構国立国語研究所（NINJAL）の方々に感謝します）。<br/>
 <a href="https://wakufactory.jp/densho/font/hentai/">https://wakufactory.jp/densho/font/hentai/</a>
 </li>
 <li>
@@ -74,7 +74,12 @@
 
 このウェブアプリの本体はMITライセンスです（フォントおよび下記のサポートコンポーネントを除きます）。
 <ul>
-
+<li>
+変体仮名の文字画像は<a href="https://www.ipa.go.jp/">独立行政法人情報処理推進機構</a>（IPA）と <a href="https://www.ninjal.ac.jp/">大学共同利用機関法人人間文化研究機構国立国語研究所</a>（NINJAL）の著作物です（クリエイティブ・コモンズ 表示 – 継承 2.1 日本 ライセンス）。
+</li>
+<li>
+学術情報交換用変体仮名の文字情報は<a href="https://www.ninjal.ac.jp/">大学共同利用機関法人人間文化研究機構国立国語研究所</a>（NINJAL）によるクリエイティブ・コモンズ 表示 4.0 国際 ライセンスによって提供されたものです。
+</li>
 <li>
 クリップボードへのコピー処理は <a href="https://clipboardjs.com/">clipboard-min.js</a> を使用しています（MITライセンス）。
 </li>
